--- a/cottonOnCarboard/random.html
+++ b/cottonOnCarboard/random.html
@@ -15,13 +15,13 @@
 	</head>
 	<body>
 
-    <script src="./js/howler.min.js"></script>
-    <script src="./js/howler.spatial.min.js"></script>
-		<script src="./js/three.min.js"></script>
-		<script src="./js/OrbitControls.js"></script>
+    <script src="./../js/howler.min.js"></script>
+    <script src="./../js/howler.spatial.min.js"></script>
+		<script src="./../js/three.min.js"></script>
+		<script src="./../js/OrbitControls.js"></script>
 
 		<!-- mine --->
-		<script src="./js/utils.js"></script>
+		<script src="./../js/utils.js"></script>
 
 		<script>
 			// https://vimeo.com/97347144
@@ -29,13 +29,30 @@
 			var camera, controls, scene, renderer;
 			var objects = [];
 
-			let X = getParameterByName('X');
-			console.log(X)
-			X = 600;
-			let Y = 600;
-			let Z = 600;
-			let boxSize = 40;
-			let numBoxes = 50;
+			let X = parseInt(getParameterByName('X'));
+			if (isNaN(X)) {
+				X = 600;
+			}
+
+			let Y = parseInt(getParameterByName('Y'));
+			if (isNaN(Y)) {
+				Y = 300;
+			}
+
+			let Z = parseInt(getParameterByName('Z'));
+			if (isNaN(Z)) {
+				Z = 600;
+			}
+
+			let boxSize = parseInt(getParameterByName('BoxSize'));
+			if (isNaN(boxSize)) {
+				boxSize = 40;
+			}
+
+			let numBoxes = parseInt(getParameterByName('NumBoxes'));
+			if (isNaN(numBoxes)) {
+				numBoxes = 50;
+			}
 
 			init();
 			animate();
@@ -49,6 +66,10 @@
 				camera.position.y = Y / 3;
 				camera.position.z = Z - 100;
 				controls = new THREE.OrbitControls( camera );
+
+				Howler.pos(camera.position.x, camera.position.y , camera.position.z );
+				Howler.orientation(camera.rotation._x, camera.rotation._y, camera.rotation._z);
+				console.log(camera);
 
 				scene = new THREE.Scene();
 				scene.background = new THREE.Color( 0xf0f0f0 );
@@ -93,11 +114,12 @@
 					objects.push( object2 );
 
 					var sound1 = new Howl({
-			    	src: ['./media/knock.mp3'],
+			    	src: ['./../media/knock.mp3'],
+						loop: true,
 						autoplay: true,
-			  		loop: true,
-						volume: 1 / numBoxes,
-						pos: [object2.position.x, object2.position.y, object2.position.z]
+						volume: boxSize / X + boxSize / Y + boxSize / Z ,
+						pos: [object2.position.x, object2.position.y, object2.position.z],
+						key: [Math.random() * 1000] // random offset
 			  	});
 				}
 
@@ -123,6 +145,9 @@
 
 			function render() {
 				controls.update();
+				Howler.pos(camera.position.x, camera.position.y , camera.position.z);
+				Howler.orientation(camera.rotation._x, camera.rotation._y, camera.rotation._z);
+				Howler.volume(1 - Math.sqrt(camera.position.x**2 + camera.position.y**2 + camera.position.z**2) / 5000)
 				renderer.render( scene, camera );
 			}
 
