--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>music 34 final project</title>
+		<title>3D Virtual Environment Generator</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<style>
@@ -28,7 +28,7 @@
 		</style>
 	</head>
 	<body>
-		<h1>Music 34 Final Project</h1>
+		<h1>3D Virtual Environment Generator</h1>
 
 		</div>
 			<button onclick="generateEnvironment()">generate environment</button>
